Fix sidebar scrollbar

--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -17,6 +17,11 @@
   overflow: auto;
 }
 
+.main::-webkit-scrollbar {
+  width: 0px; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+
 .profile-pic {
   width: 70px;
   height: 70px;
